--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <option value="KaiTi">楷体</option>
             </select>
         </div>
-        <label>网页背景 (默认: 背景.jpg)</label>
+        <label>网页背景 (默认: url('https://github.com/oohsune/lucky/blob/oohsune-patch-1/%E8%83%8C%E6%99%AF.jpg?raw=true'))</label>
         <input type="text" id="in-bg" value="url('https://github.com/oohsune/lucky/blob/oohsune-patch-1/%E8%83%8C%E6%99%AF.jpg?raw=true')" oninput="liveUpdate()">
         <span class="hint">输入 url('图片地址') 或渐变如 linear-gradient(45deg, #f00, #00f)</span>
     </div>
