--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         </div>
         <div class="col">
             <label>背景设置 (图片URL 或 渐变代码)</label>
-            <input type="text" id="cfg-bg" value="background.jpg" oninput="updateUI()">
+            <input type="text" id="cfg-bg" value="背景.jpg" oninput="updateUI()">
             <div class="hint">输入 "背景.jpg" 或 "linear-gradient(45deg, blue, red)"</div>
         </div>
     </div>
@@ -259,7 +259,7 @@
     </div>
 
     <div class="section">
-        <div class="section-title" ondblclick="toggleSecret()" title="双击此处开启隐藏功能">4. 系统设置 (双击此处有惊喜)</div>
+        <div class="section-title" ondblclick="toggleSecret()" title="1">4. 系统设置 (双击此处有惊喜)</div>
         <div class="row">
             <div class="col"><label>单次抽取人数</label><input type="number" id="cfg-draw-count" value="1" min="1" max="10" oninput="initSlots()"></div>
         </div>
