Remove surprise title from system settings section

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     </div>
 
     <div class="section">
-        <div class="section-title" ondblclick="toggleSecret()" title="1">4. 系统设置 (双击此处有惊喜)</div>
+        <div class="section-title" ondblclick="toggleSecret()" title="1">4. 系统设置</div>
         <div class="row">
             <div class="col"><label>单次抽取人数</label><input type="number" id="cfg-draw-count" value="1" min="1" max="10" oninput="initSlots()"></div>
         </div>
