--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <div class="section">
         <div class="section-header" id="trigger-area" onclick="handleSecretClick()" style="cursor: pointer;" title="连续点击2次打开隐藏功能">
-            4. 名单与系统设置 (点击此处2次)
+            4. 名单与系统设置
         </div>
         
         <label>同时中奖人数</label>
