--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <div class="form-col"><label>标题大小</label><input type="number" id="cfg-size" value="70" oninput="syncUI()"></div>
         </div>
         <label>全局背景 (图片URL 或 颜色渐变)</label>
-        <input type="text" id="cfg-bg" value="background.jpg" oninput="syncUI()">
+        <input type="text" id="cfg-bg" value="背景.jpg" oninput="syncUI()">
         <div class="hint">输入: url('image.jpg') 或 linear-gradient(45deg, #123, #456)</div>
     </div>
 
