Change text shadow color in mode-winner class

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         }
         .mode-winner {
             color: #fff; font-style: normal;
-            text-shadow: 0 0 10px #fff, 0 0 30px #ff00de, 0 0 30px #ff00de; /* 发光特效 */
+            text-shadow: 0 0 10px #fff, 0 0 30px #ff00de, 0 0 30px #feca57; /* 发光特效 */
             animation: zoom-pop 0.6s cubic-bezier(0.17, 0.89, 0.32, 1.4) forwards;
         }
 
